# task1

./: .clang-format  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
linters/: run.sh
src/: main.c
subnet_lib/: CMakeLists.txt  Subnet.c  Subnet.h
tests/: CMakeLists.txt  test_subnet.cpp
